# scantailor

./: BasicImageView.cpp  CMakeLists.txt  CommandLine.cpp  FilterOptionsWidget.cpp  ImageViewBase.cpp  ImageViewBase.h  MainWindow.cpp  NewOpenProjectPanel.cpp  PixmapRenderer.cpp  ProjectCreationContext.cpp  RelinkablePath.cpp  RelinkablePathVisualization.cpp  SmartFilenameOrdering.cpp  TabbedDebugImages.cpp  ThumbnailSequence.cpp  build_mac.sh
crash_reporter/: CMakeLists.txt  CrashReportDialog.cpp
crash_reporter/google-breakpad/processor/: scoped_ptr.h
dewarping/: CMakeLists.txt  Curve.cpp  CylindricalSurfaceDewarper.cpp  DetectVertContentBounds.cpp  DistortionModelBuilder.cpp  TextLineRefiner.cpp
filters/deskew/: CMakeLists.txt  Settings.cpp  Task.cpp
filters/fix_orientation/: CMakeLists.txt
filters/output/: CMakeLists.txt  ChangeDewarpingDialog.cpp  DespeckleView.cpp  OptionsWidget.cpp  Settings.cpp  TabbedImageView.cpp  Task.cpp
filters/page_layout/: CMakeLists.txt  ImageView.cpp  OptionsWidget.cpp  Settings.cpp
filters/page_split/: CMakeLists.txt  OptionsWidget.cpp  PageLayout.cpp  PageLayoutEstimator.cpp  SplitModeDialog.cpp  Task.cpp
filters/select_content/: CMakeLists.txt  Settings.cpp
foundation/: CMakeLists.txt
imageproc/: CMakeLists.txt
imageproc/tests/: CMakeLists.txt
interaction/: CMakeLists.txt  ZoomHandler.cpp
math/: CMakeLists.txt  PolylineIntersector.cpp  PolylineIntersector.h
math/adiff/tests/: CMakeLists.txt
math/spfit/: FrenetFrame.cpp
math/spfit/tests/: CMakeLists.txt
tests/: CMakeLists.txt
zones/: CMakeLists.txt  EditableZoneSet.cpp  ZoneContextMenuInteraction.cpp
