INCLUDE_DIRECTORIES(BEFORE ..)

SET(
	sources
	${CMAKE_SOURCE_DIR}/tests/main.cpp
	TestHessians.cpp
)

SOURCE_GROUP("Sources" FILES ${sources})

SET(
	libs
	math ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
	${Boost_PRG_EXECUTION_MONITOR_LIBRARY}
	${QT_QTCORE_LIBRARY} ${EXTRA_LIBS}
)

ADD_EXECUTABLE(adiff_tests ${sources})
TARGET_LINK_LIBRARIES(adiff_tests PUBLIC ${libs})

TARGET_LINK_LIBRARIES(adiff_tests PUBLIC Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Xml)
SET_TARGET_PROPERTIES(adiff_tests PROPERTIES AUTOMOC ON AUTOUIC ON)
SET_TARGET_PROPERTIES(adiff_tests PROPERTIES AUTOUIC_SEARCH_PATHS "${CMAKE_CURRENT_SOURCE_DIR}/ui")